# transformer

./: .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml  docs.yml
benches/: bench.py
docs/: index.md
docs/src/: embedding.md  feed_forward.md  layer_norm.md  positional_encoding.md  reference.md
examples/: README.md
examples/notebooks/: README.md  hello.ipynb
introduction/: index.html
src/embedding/: index.html
src/feed_forward/: index.html
src/layer_norm/: index.html
src/positional_encoding/: index.html
src/transformer/: config.py  hello.py  train.py
src/transformer/data/: __init__.py  bilingual_dataset.py  data.py  download.py
src/transformer/modules/: __init__.py  attention.py  decoder.py  embedding.py  encoder.py  feed_forward.py  layer_norm.py  positional_encoding.py  projection.py  residual.py  transformer.py
tests/: conftest.py  test_config.py  test_hello.py
