[project]
name = "transformer"
version = "0.1.0"
description = "Pytorch implementation of a Transformer"
authors = [{ name = "yngtdd", email = "yngtdd@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "nemo-toolkit==1.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transformer"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev-dependencies = [
    "black>=23.7.0",
    "jupyter>=1.0.0",
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[tool.hatch.envs.style]
detached = true
dependencies = [
    "black>=23.7.0",
    "flake8",
    "isort",
]

[tool.hatch.envs.style.scripts]
check = [
    "flake8 .",
    "black --check --diff .",
    "isort --check-only --diff .",
]
fmt = [
    "isort .",
    "black .",
    "check",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.2",
    "mkdocstrings-python>=1.6.2",
    "mkdocs-material>=9.2.8",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

